# svg_definitions

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: attribute_value.rs  attributes.rs  color.rs  lib.rs  parser.rs  path.rs  plain_string.rs  prelude.rs  tag_name.rs  util.rs
src/attribute_value/: animate.rs  clip_reference.rs  color.rs  gradiant_unit.rs  identifier.rs  length.rs  opacity.rs  path.rs  spread_method.rs  stop_color.rs  transform_list.rs  url.rs  values.rs  viewbox.rs
src/element/: mod.rs  tag_name.rs
src/element/properties/: mod.rs  property_value.rs
