[package]
name = "svg_definitions"
version = "0.1.0"
authors = ["Gijs Burghoorn <g.burghoorn@gmail.com>"]
edition = "2018"
description = "A Rust library with definitions for SVG elements"
homepage = "https://github.com/coastalwhite/svg_definitions.git"
repository = "https://github.com/coastalwhite/svg_definitions.git"
license = "MIT"
keywords = ["svg"]
categories = ["graphics"]
readme = "./README.md"

[dependencies]
regex="1"